# quicktree-parallelism

./: .gitignore  CMakeLists.txt  README.md  run-commands.sh
data/: matrix.phy
outputs/: tree_10k.nwk  tree_10k_RFdistances.txt  tree_10k_ref.nwk  tree_4.nwk
src/: buildtree.cpp  buildtree.cu  buildtree.cuh  buildtree.hpp  distancemat.cpp  distancemat.hpp  findgpu.cu  gpuProperty.cu  main.cpp  main_cpu.cpp  matcal.cpp  timer.hpp  tree.cpp  tree.hpp
